# ghpf-llm-wiki

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.agent/rules/: ghpf-llm-wiki.md
.agent/workflows/: ghpf-llm-wiki.md
.agents/skills/ghpf-wiki/: SKILL.md
.claude/skills/ghpf-wiki/: SKILL.md
.skills/ghpf-wiki/: SKILL.md
docs/: dependencies.md  evidence-preservation-report.md  parser-upgrade-report.md
ghpf_wiki_support/: __init__.py  dependencies.py
scripts/: __init__.py  bootstrap_install.py  detect_profile.py  ghpf_wiki.py  install_agents.py  setup_vault.py  vault_layout.py  wiki_curation.py
templates/: folder_rules.json
templates/profiles/: codebase.json  general.json  mixed.json  research.json  trading.json
tests/: test_bootstrap_install.py  test_dependencies.py  test_ghpf_wiki.py  test_setup_vault.py
