[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghpf-llm-wiki"
version = "0.1.0"
description = "Obsidian-first LLM Wiki scaffold and sidecar utilities for agent-readable research, trading, and code knowledge."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "sung-minkwon" }]
keywords = ["obsidian", "llm", "wiki", "agents", "research", "trading"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
pdf = [
  "pypdf>=4.0.0",
  "PyPDF2>=3.0.0",
  "pdfplumber>=0.11.0",
]
office = [
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "openpyxl>=3.1.0",
]
youtube = [
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2024.8.6",
]
ocr = [
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
]
figure = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "Pillow>=10.0.0",
]
graph = [
  "networkx>=3.2.0",
]
web = [
  "playwright>=1.45.0",
]
recommended = [
  "pypdf>=4.0.0",
  "PyPDF2>=3.0.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "openpyxl>=3.1.0",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2024.8.6",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "networkx>=3.2.0",
]
all = [
  "pypdf>=4.0.0",
  "PyPDF2>=3.0.0",
  "pdfplumber>=0.11.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.0",
  "openpyxl>=3.1.0",
  "youtube-transcript-api>=0.6.2",
  "yt-dlp>=2024.8.6",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "networkx>=3.2.0",
  "playwright>=1.45.0",
]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["ghpf_wiki_support*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
