[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "ghpf-llm-wiki"
version = "0.1.0"
description = "Obsidian-first LLM Wiki sidecar utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
test = []

[project.scripts]
ghpf-wiki = "scripts.ghpf_wiki:main"
ghpf-setup-vault = "scripts.setup_vault:main"

[tool.setuptools.packages.find]
include = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
